working company update

--- a/app/components/companies/company.dashboard.team.html
+++ b/app/components/companies/company.dashboard.team.html
@@ -76,7 +76,7 @@
                 <div ng-repeat="item in profile.team.team">
                     <div style="margin-right: -2px; margin-bottom:-5px;">
                         <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
                         <div ng-if="$last" style="margin-bottom:-32px;"></div>
                     </div>
                 </div>
