--- a/app/components/welcome/welcome.companies.html
+++ b/app/components/welcome/welcome.companies.html
@@ -16,7 +16,7 @@
         </label>
     </div>
     <div style="padding: 20px;">
-        <form role="form" name="welcome.founder.form" novalidate ng-submit="welcome.addCompany()" style="padding-bottom: 30px;">
+        <form role="form" name="welcome.founder.form" novalidate ng-submit="welcome.addCompany($event)" style="padding-bottom: 30px;">
             <div class="form-group">
                 <input type="text" ng-model="welcome.company" placeholder="Search by company name.." autofocus="true" typeahead="company.name for company in welcome.getCompanies($viewValue)" typeahead-editable="true" typeahead-on-select="welcome.selectedCompany = $item; welcome.notlisted = false;" class="form-control input-lg">
             </div>
