--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -7,7 +7,7 @@
                     </a>
                 </div>
                 <div class="pull-left">
-                    <img ng-src="{{profile.company.profile.avatar}}" style="height:60px;"/>
+                    <img ng-src="{{profile.company.profile.avatar}}" style="height:60px; padding-right: 10px;"/>
                 </div>
             </div>
             <h3 style="padding-left: 4px;">{{::profile.company.profile.name}}</h3>
