--- a/app/components/companies/company.dashboard.html
+++ b/app/components/companies/company.dashboard.html
@@ -6,7 +6,7 @@
                 <img class="img-circle m-b" style="height:100px;" ng-src="{{profile.company.profile.avatar || profile.company.profile.angellist.thumb_url || '/public/images/blank_startup.jpg'}}" alt="{{::profile.company.profile.name}}" onerror="this.src='/public/images/blank_startup.jpg'">
                 <div style="margin:-15px 0;">
                     <span ng-if="profile.company.profile.parents[0]" class="btn btn-default btn-xs">
-                        {{::profile.company.profile.parents[0][0].toUpperCase() + profile.company.profile.parents[0].slice(1);}}
+                        <a ui-sref="community.dashboard({location_path: profile.company.profile.parents[0], community: profile.communities[profile.company.profile.parents[0]], query: &quot;&#42;&quot;})">{{::profile.company.profile.parents[0][0].toUpperCase() + profile.company.profile.parents[0].slice(1);}}</a>
                     </span>
                     <span ng-if="profile.company.profile.stage" class="btn btn-success btn-xs">
                         {{::profile.company.profile.stage}}
@@ -16,7 +16,7 @@
                     {{::profile.company.profile.name}}
                 </h1>
                 <h3 style="padding-top: 5px;" style="line-height: 1.5;">
-                    {{::profile.company.profile.angellist.high_concept}}
+                    {{::profile.company.profile.headline}}
                 </h3>
                 <div style="padding-top:10px; overflow: hidden; height: 50px; margin-bottom: -10px;">
                     <li ng-repeat="industry in profile.company.profile.industries" style="margin-right: 5px;" class="btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: industry})">
