network removal works

--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -4,6 +4,9 @@
             <img ng-src="{{item.value.profile.avatar || item.value.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
         </a>
     </div>
+    <div style="position: absolute; margin-left: 6px; margin-top: 60px;">
+        <a ng-if="(nav.community.type == 'network' || nav.location.type == 'network') && nav.user.roles.leader[nav.community.key]" ng-click="users.remove(item)" title="Remove {{item.value.profile.name}} from {{nav.community.profile.name}}" style="color:#bbb;">remove</a>
+    </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
         <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-if="nav.community.type == 'network' || nav.location.type == 'network'" ng-click="nav.contact(item)" title="Contact {{item.value.profile.name}}" class="pull-left" style="margin-left: 6px; margin-top: 2px; padding: 0 8px 0 5px; line-height: 0;">
