--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -146,7 +146,7 @@
                             <li ui-sref="{{'user.list' + nav.nav_url}}" ng-class="{ 'active' : nav.path.endsWith(nav.community.key + '/people') }" style="padding-top: 10px;">
                                 <a><i class="fa fa-caret-right"></i>People
                                 </a>
-                                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location_path) > -1))" class="nav-third-level" ng-click="nav.invitePeople();">
+                                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location_path) > -1))" class="nav-third-level" ng-click="nav.invitePeople();">
                                     <a style="color: #aaa;">+&nbsp;&nbsp;Invite People</a>
                                 </li>
                             </li>
