added creator for community settings

--- a/app/components/nav/nav.add_cluster.html
+++ b/app/components/nav/nav.add_cluster.html
@@ -48,7 +48,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default pull-left" ng-click="add.cancel()">Cancel</button>
+        <button type="button" class="btn btn-default" ng-click="add.cancel()">Cancel</button>
         <button type="button" class="btn btn-primary" ng-click="add.createCluster()">Create {{add.name}} Cluster</button>
     </div>
 </div>
