--- a/app/components/nav/nav.add_network.html
+++ b/app/components/nav/nav.add_network.html
@@ -34,7 +34,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" ng-click="add.cancel()">Close</button>
+        <button type="button" class="btn btn-default" ng-click="add.cancel()">Cancel</button>
         <button type="button" class="btn btn-primary" ng-click="add.createNetwork()">Create {{add.name}} Network</button>
     </div>
 </div>
