--- a/app/components/nav/nav.community_settings.html
+++ b/app/components/nav/nav.community_settings.html
@@ -69,7 +69,7 @@
                             <td style="padding-left: 20px;">
                                 <input type="checkbox" class="form-control checkbox" ng-checked="{{domain.full}}" disabled>
                             </td>
-                            <td style="padding-left: 20px;">
+                            <td style="padding-left: 20px;" ng-show="domain.creator == settings.user.key">
                                 <i class="pe-7s-close-circle" ng-click="settings.removeEmbed($index)" style="font-size: 28px; cursor: pointer;"></i>
                             </td>
                         </tr>
@@ -78,7 +78,7 @@
 
                 <div class="form-group" style="margin-top: 25px;">
                     <label>Use this code to embed this community:</label>
-                    <pre>[iframe src="https://startupcommunity.org/{{ settings.community.key == settings.location_key ? settings.community.key : settings.location_key + '/' + settings.community.key }}" width="100%" height="1250"]</pre>
+                    <pre>[iframe src="https://startupcommunity.org/{{ settings.community.key == settings.location.key ? settings.community.key : settings.location.key + '/' + settings.community.key }}" width="100%" height="1250"]</pre>
                     <em>This code is an example using the <a target="_blank" href="https://wordpress.org/plugins/iframe/">Wordpress Iframe plugin</a>. We recommend a minimum width of around 650px and minimum height of 1250px for the iframe.</em>
                 </div>
             </div>
@@ -86,7 +86,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button ng-if="settings.user.roles.leader[settings.community.key].indexOf(settings.location_key) > -1 && settings.community.type !== 'location'" type="button" class="btn btn-danger pull-left" ng-click="settings.delete()">Delete {{settings.community.profile.name}}</button>
+        <button ng-if="settings.user.roles.leader[settings.community.key].indexOf(settings.location.key) > -1 && settings.community.type !== 'location'" type="button" class="btn btn-danger pull-left" ng-click="settings.delete()">Delete {{settings.community.profile.name}}</button>
         <button type="button" class="btn btn-default" ng-click="settings.cancel()">Cancel</button>
         <button type="button" class="btn btn-primary" ng-click="settings.save()">Save</button>
     </div>
